helm/provisioning/.kyverno/kyverno-test.yaml
## SPDX-FileCopyrightText: 2024 Bundesministerium des Innern und für Heimat, PG ZenDiS "Projektgruppe für Aufbau ZenDiS"
## SPDX-License-Identifier: Apache-2.0
---
apiVersion: "cli.kyverno.io/v1alpha1"
kind: "Test"
metadata:
  name: "nubus-test"
policies:
  - "../../../../container-pre-commit/kyverno/policies/disallow-container-sock-mounts.yaml"
  - "../../../../container-pre-commit/kyverno/policies/disallow-default-serviceaccount.yaml"
  - "../../../../container-pre-commit/kyverno/policies/disallow-host-namespaces.yaml"
  - "../../../../container-pre-commit/kyverno/policies/disallow-host-path.yaml"
  - "../../../../container-pre-commit/kyverno/policies/disallow-host-ports.yaml"
  - "../../../../container-pre-commit/kyverno/policies/disallow-host-process.yaml"
  - "../../../../container-pre-commit/kyverno/policies/disallow-latest-tag.yaml"
  - "../../../../container-pre-commit/kyverno/policies/require-containersecuritycontext.yaml"
  - "../../../../container-pre-commit/kyverno/policies/require-health-and-liveness-check.yaml"
  - "../../../../container-pre-commit/kyverno/policies/require-imagepullpolicy.yaml"
  - "../../../../container-pre-commit/kyverno/policies/require-requests-limits.yaml"
  - "../../../../container-pre-commit/kyverno/policies/require-tag-and-digest.yaml"
  - "../../../../container-pre-commit/kyverno/policies/template-image-registries.yaml"
  - "../../../../container-pre-commit/kyverno/policies/template-ingress.yaml"
  - "../../../../container-pre-commit/kyverno/policies/template-replicas.yaml"
  - "../../../../container-pre-commit/kyverno/policies/template-require-imagepullsecets.yaml"
  - "../../../../container-pre-commit/kyverno/policies/template-storage.yaml"
resources:
  - "manifest.yaml"
results:
  - resources:
      - "release-name-provisioning-dispatcher"
    policy: "disallow-default-serviceaccount"
    kind: "Deployment"
    rule: "disallow-default-serviceAccountName"
    result: "pass"
  - resources:
      - "release-name-provisioning-dispatcher"
    policy: "require-health-and-liveness-check"
    kind: "Deployment"
    rule: "require-health-and-liveness-check"
    result: "pass"
  - resources:
      - "release-name-provisioning-dispatcher"
    policy: "require-containersecuritycontext"
    kind: "Deployment"
    rule: "require-ro-rootfs"
    result: "pass"
  - resources:
      - "release-name-provisioning-dispatcher"
    policy: "require-containersecuritycontext"
    kind: "Deployment"
    rule: "require-no-privilege-escalation"
    result: "pass"
  - resources:
      - "release-name-provisioning-dispatcher"
    policy: "require-containersecuritycontext"
    kind: "Deployment"
    rule: "require-all-capabilities-dropped"
    result: "pass"
  - resources:
      - "release-name-provisioning-dispatcher"
    policy: "require-containersecuritycontext"
    kind: "Deployment"
    rule: "require-no-privileged"
    result: "pass"
  - resources:
      - "release-name-provisioning-dispatcher"
    policy: "require-containersecuritycontext"
    kind: "Deployment"
    rule: "require-run-as-user"
    result: "pass"
  - resources:
      - "release-name-provisioning-dispatcher"
    policy: "require-containersecuritycontext"
    kind: "Deployment"
    rule: "require-run-as-group"
    result: "pass"
  - resources:
      - "release-name-provisioning-dispatcher"
    policy: "require-containersecuritycontext"
    kind: "Deployment"
    rule: "require-seccomp-profile"
    result: "pass"
  - resources:
      - "release-name-provisioning-dispatcher"
    policy: "require-containersecuritycontext"
    kind: "Deployment"
    rule: "require-run-as-non-root"
    result: "pass"
  - resources:
      - "release-name-provisioning-dispatcher"
    policy: "require-containersecuritycontext"
    kind: "Deployment"
    rule: "require-empty-seLinuxOptions"
    result: "pass"
  - resources:
      - "release-name-provisioning-dispatcher"
    policy: "template-replicas"
    kind: "Deployment"
    rule: "template-replicas"
    result: "pass"
  - resources:
      - "release-name-provisioning-api"
    policy: "disallow-default-serviceaccount"
    kind: "Deployment"
    rule: "disallow-default-serviceAccountName"
    result: "pass"
  - resources:
      - "release-name-provisioning-api"
    policy: "require-health-and-liveness-check"
    kind: "Deployment"
    rule: "require-health-and-liveness-check"
    result: "pass"
  - resources:
      - "release-name-provisioning-api"
    policy: "require-containersecuritycontext"
    kind: "Deployment"
    rule: "require-ro-rootfs"
    result: "pass"
  - resources:
      - "release-name-provisioning-api"
    policy: "require-containersecuritycontext"
    kind: "Deployment"
    rule: "require-no-privilege-escalation"
    result: "pass"
  - resources:
      - "release-name-provisioning-api"
    policy: "require-containersecuritycontext"
    kind: "Deployment"
    rule: "require-all-capabilities-dropped"
    result: "pass"
  - resources:
      - "release-name-provisioning-api"
    policy: "require-containersecuritycontext"
    kind: "Deployment"
    rule: "require-no-privileged"
    result: "pass"
  - resources:
      - "release-name-provisioning-api"
    policy: "require-containersecuritycontext"
    kind: "Deployment"
    rule: "require-run-as-user"
    result: "pass"
  - resources:
      - "release-name-provisioning-api"
    policy: "require-containersecuritycontext"
    kind: "Deployment"
    rule: "require-run-as-group"
    result: "pass"
  - resources:
      - "release-name-provisioning-api"
    policy: "require-containersecuritycontext"
    kind: "Deployment"
    rule: "require-seccomp-profile"
    result: "pass"
  - resources:
      - "release-name-provisioning-api"
    policy: "require-containersecuritycontext"
    kind: "Deployment"
    rule: "require-run-as-non-root"
    result: "pass"
  - resources:
      - "release-name-provisioning-api"
    policy: "require-containersecuritycontext"
    kind: "Deployment"
    rule: "require-empty-seLinuxOptions"
    result: "pass"
  - resources:
      - "release-name-provisioning-api"
    policy: "template-replicas"
    kind: "Deployment"
    rule: "template-replicas"
    result: "pass"
  - resources:
      - "release-name-provisioning-prefill"
    policy: "disallow-default-serviceaccount"
    kind: "Deployment"
    rule: "disallow-default-serviceAccountName"
    result: "pass"
  - resources:
      - "release-name-provisioning-prefill"
    policy: "require-health-and-liveness-check"
    kind: "Deployment"
    rule: "require-health-and-liveness-check"
    result: "pass"
  - resources:
      - "release-name-provisioning-prefill"
    policy: "require-containersecuritycontext"
    kind: "Deployment"
    rule: "require-ro-rootfs"
    result: "pass"
  - resources:
      - "release-name-provisioning-prefill"
    policy: "require-containersecuritycontext"
    kind: "Deployment"
    rule: "require-no-privilege-escalation"
    result: "pass"
  - resources:
      - "release-name-provisioning-prefill"
    policy: "require-containersecuritycontext"
    kind: "Deployment"
    rule: "require-all-capabilities-dropped"
    result: "pass"
  - resources:
      - "release-name-provisioning-prefill"
    policy: "require-containersecuritycontext"
    kind: "Deployment"
    rule: "require-no-privileged"
    result: "pass"
  - resources:
      - "release-name-provisioning-prefill"
    policy: "require-containersecuritycontext"
    kind: "Deployment"
    rule: "require-run-as-user"
    result: "pass"
  - resources:
      - "release-name-provisioning-prefill"
    policy: "require-containersecuritycontext"
    kind: "Deployment"
    rule: "require-run-as-group"
    result: "pass"
  - resources:
      - "release-name-provisioning-prefill"
    policy: "require-containersecuritycontext"
    kind: "Deployment"
    rule: "require-seccomp-profile"
    result: "pass"
  - resources:
      - "release-name-provisioning-prefill"
    policy: "require-containersecuritycontext"
    kind: "Deployment"
    rule: "require-run-as-non-root"
    result: "pass"
  - resources:
      - "release-name-provisioning-prefill"
    policy: "require-containersecuritycontext"
    kind: "Deployment"
    rule: "require-empty-seLinuxOptions"
    result: "pass"
  - resources:
      - "release-name-provisioning-prefill"
    policy: "template-replicas"
    kind: "Deployment"
    rule: "template-replicas"
    result: "pass"
  - resources:
      - "release-name-provisioning-udm-transformer"
    policy: "disallow-default-serviceaccount"
    kind: "Deployment"
    rule: "disallow-default-serviceAccountName"
    result: "pass"
  - resources:
      - "release-name-provisioning-udm-transformer"
    policy: "require-health-and-liveness-check"
    kind: "Deployment"
    rule: "require-health-and-liveness-check"
    result: "pass"
  - resources:
      - "release-name-provisioning-udm-transformer"
    policy: "require-containersecuritycontext"
    kind: "Deployment"
    rule: "require-ro-rootfs"
    result: "pass"
  - resources:
      - "release-name-provisioning-udm-transformer"
    policy: "require-containersecuritycontext"
    kind: "Deployment"
    rule: "require-no-privilege-escalation"
    result: "pass"
  - resources:
      - "release-name-provisioning-udm-transformer"
    policy: "require-containersecuritycontext"
    kind: "Deployment"
    rule: "require-all-capabilities-dropped"
    result: "pass"
  - resources:
      - "release-name-provisioning-udm-transformer"
    policy: "require-containersecuritycontext"
    kind: "Deployment"
    rule: "require-no-privileged"
    result: "pass"
  - resources:
      - "release-name-provisioning-udm-transformer"
    policy: "require-containersecuritycontext"
    kind: "Deployment"
    rule: "require-run-as-user"
    result: "pass"
  - resources:
      - "release-name-provisioning-udm-transformer"
    policy: "require-containersecuritycontext"
    kind: "Deployment"
    rule: "require-run-as-group"
    result: "pass"
  - resources:
      - "release-name-provisioning-udm-transformer"
    policy: "require-containersecuritycontext"
    kind: "Deployment"
    rule: "require-seccomp-profile"
    result: "pass"
  - resources:
      - "release-name-provisioning-udm-transformer"
    policy: "require-containersecuritycontext"
    kind: "Deployment"
    rule: "require-run-as-non-root"
    result: "pass"
  - resources:
      - "release-name-provisioning-udm-transformer"
    policy: "require-containersecuritycontext"
    kind: "Deployment"
    rule: "require-empty-seLinuxOptions"
    result: "pass"
  - resources:
      - "release-name-provisioning-udm-transformer"
    policy: "template-replicas"
    kind: "Deployment"
    rule: "template-replicas"
    result: "pass"
  - resources:
      - "release-name-provisioning-nats"
    policy: "disallow-default-serviceaccount"
    kind: "StatefulSet"
    rule: "disallow-default-serviceAccountName"
    result: "pass"
  - resources:
      - "release-name-provisioning-nats"
    policy: "require-health-and-liveness-check"
    kind: "StatefulSet"
    rule: "require-health-and-liveness-check"
    result: "pass"
  - resources:
      - "release-name-provisioning-nats"
    policy: "require-containersecuritycontext"
    kind: "StatefulSet"
    rule: "require-ro-rootfs"
    result: "pass"
  - resources:
      - "release-name-provisioning-nats"
    policy: "require-containersecuritycontext"
    kind: "StatefulSet"
    rule: "require-no-privilege-escalation"
    result: "pass"
  - resources:
      - "release-name-provisioning-nats"
    policy: "require-containersecuritycontext"
    kind: "StatefulSet"
    rule: "require-all-capabilities-dropped"
    result: "pass"
  - resources:
      - "release-name-provisioning-nats"
    policy: "require-containersecuritycontext"
    kind: "StatefulSet"
    rule: "require-no-privileged"
    result: "pass"
  - resources:
      - "release-name-provisioning-nats"
    policy: "require-containersecuritycontext"
    kind: "StatefulSet"
    rule: "require-run-as-user"
    result: "pass"
  - resources:
      - "release-name-provisioning-nats"
    policy: "require-containersecuritycontext"
    kind: "StatefulSet"
    rule: "require-run-as-group"
    result: "pass"
  - resources:
      - "release-name-provisioning-nats"
    policy: "require-containersecuritycontext"
    kind: "StatefulSet"
    rule: "require-seccomp-profile"
    result: "pass"
  - resources:
      - "release-name-provisioning-nats"
    policy: "require-containersecuritycontext"
    kind: "StatefulSet"
    rule: "require-run-as-non-root"
    result: "pass"
  - resources:
      - "release-name-provisioning-nats"
    policy: "require-containersecuritycontext"
    kind: "StatefulSet"
    rule: "require-empty-seLinuxOptions"
    result: "pass"
  - resources:
      - "release-name-provisioning-nats"
    policy: "template-replicas"
    kind: "StatefulSet"
    rule: "template-replicas"
    result: "pass"
  - resources:
      - "release-name-provisioning-register-consumers"
    policy: "disallow-default-serviceaccount"
    kind: "Job"
    rule: "disallow-default-serviceAccountName"
    result: "pass"
  - resources:
      - "release-name-provisioning-register-consumers"
    policy: "require-containersecuritycontext"
    kind: "Job"
    rule: "require-ro-rootfs"
    result: "pass"
  - resources:
      - "release-name-provisioning-register-consumers"
    policy: "require-containersecuritycontext"
    kind: "Job"
    rule: "require-no-privilege-escalation"
    result: "pass"
  - resources:
      - "release-name-provisioning-register-consumers"
    policy: "require-containersecuritycontext"
    kind: "Job"
    rule: "require-all-capabilities-dropped"
    result: "pass"
  - resources:
      - "release-name-provisioning-register-consumers"
    policy: "require-containersecuritycontext"
    kind: "Job"
    rule: "require-no-privileged"
    result: "pass"
  - resources:
      - "release-name-provisioning-register-consumers"
    policy: "require-containersecuritycontext"
    kind: "Job"
    rule: "require-run-as-user"
    result: "pass"
  - resources:
      - "release-name-provisioning-register-consumers"
    policy: "require-containersecuritycontext"
    kind: "Job"
    rule: "require-run-as-group"
    result: "pass"
  - resources:
      - "release-name-provisioning-register-consumers"
    policy: "require-containersecuritycontext"
    kind: "Job"
    rule: "require-seccomp-profile"
    result: "pass"
  - resources:
      - "release-name-provisioning-register-consumers"
    policy: "require-containersecuritycontext"
    kind: "Job"
    rule: "require-run-as-non-root"
    result: "pass"
  - resources:
      - "release-name-provisioning-register-consumers"
    policy: "require-containersecuritycontext"
    kind: "Job"
    rule: "require-empty-seLinuxOptions"
    result: "pass"
...
